# ai-visual-inference-samples

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml  requirements-base.txt  requirements-ipex.txt  requirements-ov.txt  setup.py  third-party-programs.txt
data/labels/: coco_80cl.txt
docker/: Dockerfile.ipex  Dockerfile.ov  third-party-programs-ipex.txt  third-party-programs-ov.txt
docs/: README.md  docker-configure-gpu-access.md  measuring-performance-with-ai-vi-samples.md  pip-package-guide.md  running-sample-apps.md
samples/: .gitignore  run_multi.py
samples/common/: arguments.py  frame_counter_stream.py  get_dirs.py  logger.py  stop_condition.py  utils.py
samples/models/: __init__.py  fbnet.py  models_base.py  resnet50.py  ssd_mobilenet_v1_coco.py  swin_transformer.py  unetpp.py  yolo.py  yolov5m.py
samples/models/dataset/: dataset_base.py  imagenette.py
samples/openvino/: requirements.txt  run_multi.sh
samples/openvino/FBNet/: main.py
samples/openvino/ResNet50/: main.py
samples/openvino/ResNet50_GPU_CPU/: main.py
samples/openvino/SwinTransformer/: main.py
samples/openvino/YOLOv5m/: main.py  yolov5m_pipeline.py
samples/openvino/YOLOv5m_GPU_CPU/: main.py
samples/openvino/ssd_mobilenet_v1_coco/: main.py
samples/openvino/ssd_mobilenet_v1_coco_GPU_CPU/: main.py
samples/openvino/utils/: imagenet_utils.py  ov_arguments.py  ov_backend_inference_only.py  ov_pipeline.py  yolo_pipeline.py
samples/pytorch/: requirements.txt  run_multi.sh
samples/pytorch/ResNet50/: main.py
samples/pytorch/SwinTransformer/: main.py
samples/pytorch/utils/: .gitignore  README.md  cpu_workload_torchvision.py  get_dirs.py  imagenet2012_util.py  inferencer.py  metrics.py  pt_arguments.py  pt_pipeline.py  torchvision_videoreader.py
samples/pytorch/utils/imagenet_util/: imagenet_pipeline.py
samples/pytorch/utils/resnet50_util/: quantization.py
src/: CMakeLists.txt
src/cmake/: FindLevelZero.cmake  FindLibavDeps.cmake  FindPybind11Deps.cmake  FindPythonDeps.cmake  FindVAAPIDeps.cmake
src/cpp/context_manager/: CMakeLists.txt  context_manager.cpp  context_manager.hpp
src/cpp/frame_transform/: CMakeLists.txt  frame_transform.cpp
src/cpp/include/: CMakeLists.txt
src/cpp/include/visual_ai/: frame.hpp  memory_format.hpp  system_frame.hpp
src/cpp/l0_helper/: CMakeLists.txt  l0_context.cpp  l0_context.hpp  l0_utils.cpp  l0_utils.hpp  usm_frame.cpp  usm_frame.hpp
src/cpp/utils/: CMakeLists.txt  itt.hpp  logger.hpp  scope_guard.hpp
src/cpp/vaapi_helper/: CMakeLists.txt  vaapi_context.cpp  vaapi_context.hpp  vaapi_frame.cpp  vaapi_frame.hpp  vaapi_frame_converter.cpp  vaapi_frame_converter.hpp  vaapi_frame_pool.cpp  vaapi_frame_pool.hpp  vaapi_overlay.cpp  vaapi_overlay.hpp  vaapi_utils.cpp  vaapi_utils.hpp
src/cpp/visual_ai_bind/: CMakeLists.txt  overlay_bind.cpp  utils_bind.cpp  visual_ai_bind.cpp
src/cpp/xpu_decoder/: CMakeLists.txt  perf_counters.hpp  xpu_decoder.cpp
src/cpp/xpu_encoder/: CMakeLists.txt  xpu_encoder.cpp
src/python/intel_visual_ai/: __init__.py  data_loader.py  frame.py  imageoverlay.py  itt.py  metrics.py  model_loader.py  multi_stream_videoreader.py  openvino_infer_backend.py  stream.py  torchvision_videoreader.py  videoreader.py  videowriter.py
src/python/intel_visual_ai/dataset/: dataset_base.py  imagenette.py
tools/: run_xpumcli.sh
